<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <co.froogal.froogal.font.FontelloTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fontello_user"
            android:textColor="@color/main_color_grey_600"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <co.froogal.froogal.view.FloatLabeledEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:fletFloatingHint="@string/emailHint"
            android:id="@+id/email"
            app:fletHintTextColor="@color/main_color_500"
            app:fletSingleLine="true"
            app:fletTextBackground="@drawable/edit_text_background_accent"
            app:fletTextColor="@color/main_color_grey_400" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical" >

        <co.froogal.froogal.font.FontelloTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fontello_password"
            android:textColor="@color/main_color_grey_600"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <co.froogal.froogal.view.FloatLabeledEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:id="@+id/pword"
            app:fletFloatingHint="@string/password"
            app:fletHintTextColor="@color/main_color_500"
            app:fletPassword="true"
            app:fletSingleLine="true"
            app:fletTextBackground="@drawable/edit_text_background_accent"
            app:fletTextColor="@color/main_color_grey_400" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp" >

        <co.froogal.froogal.view.MaterialRippleLayout
            style="@style/RippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            app:rippleColor="@color/main_color_grey_400" >

            <co.froogal.froogal.font.RobotoTextView
                android:id="@+id/login"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/main_color_500"
                android:minWidth="112dp"

                android:text="@string/login"
                android:textColor="#fff" />
        </co.froogal.froogal.view.MaterialRippleLayout>


    </LinearLayout>


    <co.froogal.froogal.view.MaterialRippleLayout
        style="@style/RippleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="54dp"
        app:rippleColor="@color/main_color_grey_400" >

        <co.froogal.froogal.font.RobotoTextView
            android:id="@+id/passres"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:minWidth="112dp"
            android:text="forgot password?"
            android:textColor="@color/main_color_500" />
    </co.froogal.froogal.view.MaterialRippleLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/loginErrorMsg"
        android:text="errrors_shown_here"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="Login with Facebook" />


</LinearLayout>