<co.froogal.froogal.library.NotifyingScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context="co.froogal.froogal.fragment.AboutScrollViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/horizontal_divider"
        android:showDividers="middle"
        android:paddingRight="2dp">

        <include layout="@layout/header_placeholder_temp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/number">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_contact_phone_black_24dp" />


                <co.froogal.froogal.view.FloatLabeledEditText
                    android:layout_width="0dp"
                    app:fletInputType="number"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    app:fletFloatingHint="@string/number"
                    android:id="@+id/number_edit"
                    app:fletHintTextColor="@color/main_color_500"
                    app:fletSingleLine="true"
                    app:fletTextBackground="@drawable/edit_text_background_accent"
                    app:fletTextColor="@color/main_color_400" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:id="@+id/operator">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_action" />

                <Spinner
                    android:id="@+id/operator_spin"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:id="@+id/amount">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_account_balance_wallet_black_24dp" />

                <co.froogal.froogal.view.FloatLabeledEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:fletInputType="number"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:id="@+id/amount_edit"
                    app:fletFloatingHint="@string/amount"
                    app:fletHintTextColor="@color/main_color_500"
                    app:fletSingleLine="true"
                    app:fletTextBackground="@drawable/edit_text_background_accent"
                    app:fletTextColor="@color/main_color_400" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:id="@+id/number">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_contact_phone_black_24dp" />

                <co.froogal.froogal.view.FloatLabeledEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:fletInputType="number"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:id="@+id/number_edit"
                    app:fletFloatingHint="@string/number"
                    app:fletHintTextColor="@color/main_color_500"
                    app:fletSingleLine="true"
                    app:fletTextBackground="@drawable/edit_text_background_accent"
                    app:fletTextColor="@color/main_color_400" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal">

                <co.froogal.froogal.view.MaterialRippleLayout
                    style="@style/RippleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    app:rippleColor="@color/main_color_grey_400" >

                    <co.froogal.froogal.font.RobotoTextView
                        android:id="@+id/submit_recharge"
                        style="@style/ButtonStyle.RaisedEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@color/main_color_500"
                        android:minWidth="140dp"
                        android:text="@string/submit"
                        android:onClick="recharge_submit"
                        android:textStyle="bold"
                        android:textColor="#fff" />
                </co.froogal.froogal.view.MaterialRippleLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    </co.froogal.froogal.library.NotifyingScrollView>
